Adding IAM quota tests.

--- a/tests/selenium/KOALA/IAM_Users/create-as-quotas.html
+++ b/tests/selenium/KOALA/IAM_Users/create-as-quotas.html
@@ -11,6 +11,21 @@
 <tr><td rowspan="1" colspan="3">create-ec2-quotas</td></tr>
 </thead><tbody>
 <tr>
+	<td>store</td>
+	<td>1</td>
+	<td>as_groups</td>
+</tr>
+<tr>
+	<td>store</td>
+	<td>1</td>
+	<td>as_lc</td>
+</tr>
+<tr>
+	<td>store</td>
+	<td>1</td>
+	<td>as_sp</td>
+</tr>
+<tr>
 	<td>selectWindow</td>
 	<td>null</td>
 	<td></td>
@@ -41,69 +56,24 @@
 	<td></td>
 </tr>
 <tr>
-	<td>store</td>
-	<td>1</td>
-	<td>ec2_images</td>
-</tr>
-<tr>
-	<td>store</td>
-	<td>1</td>
-	<td>ec2_instances</td>
-</tr>
-<tr>
-	<td>store</td>
-	<td>1</td>
-	<td>ec2_volumes</td>
-</tr>
-<tr>
-	<td>store</td>
-	<td>1</td>
-	<td>ec2_volume_size</td>
-</tr>
-<tr>
-	<td>store</td>
-	<td>1</td>
-	<td>ec2_snapshots</td>
-</tr>
-<tr>
-	<td>store</td>
-	<td>1</td>
-	<td>ec2_elastic_ip</td>
-</tr>
-<tr>
 	<td>click</td>
-	<td>css=span.title &gt; a &gt; span</td>
+	<td>link=Auto scaling</td>
 	<td></td>
 </tr>
 <tr>
 	<td>sendKeys</td>
-	<td>id=ec2_images_max</td>
-	<td>${ec2_images}</td>
+	<td>id=autoscale_groups_max</td>
+	<td>${as_groups}</td>
 </tr>
 <tr>
 	<td>sendKeys</td>
-	<td>id=ec2_instances_max</td>
-	<td>${ec2_instances}</td>
+	<td>id=launch_configs_max</td>
+	<td>${as_lc}</td>
 </tr>
 <tr>
 	<td>sendKeys</td>
-	<td>id=ec2_volumes_max</td>
-	<td>${ec2_volumes}</td>
-</tr>
-<tr>
-	<td>sendKeys</td>
-	<td>id=ec2_total_size_all_vols</td>
-	<td>${ec2_volume_size}</td>
-</tr>
-<tr>
-	<td>sendKeys</td>
-	<td>id=ec2_snapshots_max</td>
-	<td>${ec2_snapshots}</td>
-</tr>
-<tr>
-	<td>sendKeys</td>
-	<td>id=ec2_elastic_ip_max</td>
-	<td>${ec2_elastic_ip}</td>
+	<td>id=scaling_policies_max</td>
+	<td>${as_sp}</td>
 </tr>
 <tr>
 	<td>click</td>
