--- a/tests/selenium/KOALA/IAM_Users/IAM_USER_AS_QUOTAS.html
+++ b/tests/selenium/KOALA/IAM_Users/IAM_USER_AS_QUOTAS.html
@@ -15,15 +15,13 @@
 <tr><td><a href="verify-users-number-increased-by-1.html">verify-users-number-increased-by-1</a></td></tr>
 <tr><td><a href="add-user-access-to-user_1.html">add-user-access-to-user_1</a></td></tr>
 <tr><td><a href="verify-user-access-policy-to-user_1.html">verify-user-access-policy-to-user_1</a></td></tr>
-<tr><td><a href="create_quotas.html">create_quotas</a></td></tr>
-<tr><td><a href="verify-quota-values.html">verify-quota-values</a></td></tr>
+<tr><td><a href="create-as-quotas.html">create-as-quotas</a></td></tr>
+<tr><td><a href="verify-as-quota-values.html">verify-as-quota-values</a></td></tr>
 <tr><td><a href="koala_logout.html">koala_logout</a></td></tr>
 <tr><td><a href="user_1-logon.html">user_1-logon</a></td></tr>
-<tr><td><a href="verify-ec2-instance-quota.html">verify-ec2-instance-quota</a></td></tr>
-<tr><td><a href="verify-ec2-volume-quota.html">verify-ec2-volume-quota</a></td></tr>
-<tr><td><a href="verify-ec2-volume-size-quota.html">verify-ec2-volume-size-quota</a></td></tr>
-<tr><td><a href="verify-ec2-snapshot-quota.html">verify-ec2-snapshot-quota</a></td></tr>
-<tr><td><a href="verify-ec2-allocate-elastic-ip-address-quota.html">verify-ec2-allocate-elastic-ip-address-quota</a></td></tr>
+<tr><td><a href="verify-as-launch-config-quota.html">verify-as-launch-config-quota</a></td></tr>
+<tr><td><a href="verify-as-scaling-group-config-quota.html">verify-as-scaling-group-config-quota</a></td></tr>
+<tr><td><a href="verify-as-scale-policy-quota.html">verify-as-scale-policy-quota</a></td></tr>
 <tr><td><a href="user_1-logout.html">user_1-logout</a></td></tr>
 <tr><td><a href="koala_login.html">koala_login</a></td></tr>
 <tr><td><a href="delete-user_1.html">delete-user_1</a></td></tr>
