--- a/tests/selenium/KOALA/IAM_Users/verify-as-scale-policy-quota.html
+++ b/tests/selenium/KOALA/IAM_Users/verify-as-scale-policy-quota.html
@@ -3,13 +3,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="selenium.base" href="https://10.111.5.170/" />
-<title>verify-ec2-allocate-elastic-ip-address-quota</title>
+<title>verify-ec2-volume-size-quota</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">verify-ec2-allocate-elastic-ip-address-quota</td></tr>
+<tr><td rowspan="1" colspan="3">verify-ec2-volume-size-quota</td></tr>
 </thead><tbody>
 <tr>
 	<td>setSpeed</td>
@@ -33,12 +32,12 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>id=resource-menu-netsec</td>
+	<td>id=resource-menu-autoscaling</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>id=resource-menuitem-eips</td>
+	<td>id=resource-menuitem-scalinggroups</td>
 	<td></td>
 </tr>
 <tr>
@@ -47,78 +46,88 @@
 	<td></td>
 </tr>
 <tr>
-	<td>storeXpathCount</td>
-	<td>//table[1]/tbody/tr</td>
-	<td>tcount1</td>
-</tr>
-<tr>
-	<td>echo</td>
-	<td>${tcount1}</td>
+	<td>clickAndWait</td>
+	<td>link=sg1</td>
 	<td></td>
 </tr>
 <tr>
-	<td>click</td>
-	<td>id=allocate-ipaddresses-btn</td>
+	<td>clickAndWait</td>
+	<td>link=Policies</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>css=div.plus</td>
 	<td></td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>id=ipcount</td>
-	<td>1</td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=allocate-ipaddresses-dialog-btn</td>
-	<td></td>
+	<td>id=name</td>
+	<td>sp1</td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>id=allocate-ipaddresses-btn</td>
+	<td>link=Create alarm</td>
 	<td></td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>id=ipcount</td>
-	<td>1</td>
+	<td>xpath=(//input[@id='name'])[2]</td>
+	<td>alarm1</td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>id=allocate-ipaddresses-dialog-btn</td>
-	<td></td>
-</tr>
-<tr>
-	<td>assertTextPresent</td>
-	<td>Quota exceeded while trying to create: address by user:</td>
-	<td></td>
-</tr>
-<tr>
-	<td>waitForTextPresent</td>
-	<td>items found</td>
-	<td></td>
-</tr>
-<tr>
-	<td>storeXpathCount</td>
-	<td>//table[1]/tbody/tr</td>
-	<td>tcount2</td>
-</tr>
-<tr>
-	<td>assertEval</td>
-	<td>${tcount1}+1==${tcount2}</td>
-	<td>true</td>
+	<td>select</td>
+	<td>id=metric</td>
+	<td>label=AWS/EC2 - CPUUtilization</td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>css=i.fi-widget</td>
+	<td>css=option[value=&quot;CPUUtilization&quot;]</td>
 	<td></td>
 </tr>
 <tr>
+	<td>select</td>
+	<td>id=dimension</td>
+	<td>label=Scaling group</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=threshold</td>
+	<td>90</td>
+</tr>
+<tr>
 	<td>click</td>
-	<td>link=Release to cloud</td>
+	<td>id=create-alarm-btn</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForTextNotPresent</td>
+	<td>Creating alarm</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>id=release_ip_submit_button</td>
+	<td>id=create-policy-btn</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>css=div.plus</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=name</td>
+	<td>sp2</td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>name=alarm</td>
+	<td>label=alarm1</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=create-policy-btn</td>
 	<td></td>
 </tr>
 </tbody></table>
