--- a/tests/selenium/KOALA/IAM_Users/verify-as-scaling-group-config-quota.html
+++ b/tests/selenium/KOALA/IAM_Users/verify-as-scaling-group-config-quota.html
@@ -3,13 +3,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="selenium.base" href="https://10.111.5.170/" />
-<title>verify-ec2-allocate-elastic-ip-address-quota</title>
+<title>verify-ec2-volume-quota</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">verify-ec2-allocate-elastic-ip-address-quota</td></tr>
+<tr><td rowspan="1" colspan="3">verify-ec2-volume-quota</td></tr>
 </thead><tbody>
 <tr>
 	<td>setSpeed</td>
@@ -33,12 +32,12 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>id=resource-menu-netsec</td>
+	<td>id=resource-menu-autoscaling</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>id=resource-menuitem-eips</td>
+	<td>id=resource-menuitem-scalinggroups</td>
 	<td></td>
 </tr>
 <tr>
@@ -57,38 +56,73 @@
 	<td></td>
 </tr>
 <tr>
-	<td>click</td>
-	<td>id=allocate-ipaddresses-btn</td>
+	<td>selectWindow</td>
+	<td>null</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=create-scalinggroup-btn</td>
 	<td></td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>id=ipcount</td>
-	<td>1</td>
+	<td>id=name</td>
+	<td>sg1</td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>id=launch_config</td>
+	<td>label=lc1</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>css=#visit-step-2 &gt; span</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>id=allocate-ipaddresses-dialog-btn</td>
+	<td>id=create-scalinggroup-btn</td>
 	<td></td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>id=allocate-ipaddresses-btn</td>
+	<td>id=resource-menu-autoscaling</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=resource-menuitem-scalinggroups</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=create-scalinggroup-btn</td>
 	<td></td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>id=ipcount</td>
-	<td>1</td>
+	<td>id=name</td>
+	<td>sg2</td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>id=launch_config</td>
+	<td>label=lc1</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>id=visit-step-2</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>id=allocate-ipaddresses-dialog-btn</td>
+	<td>id=create-scalinggroup-btn</td>
 	<td></td>
 </tr>
 <tr>
 	<td>assertTextPresent</td>
-	<td>Quota exceeded while trying to create: address by user:</td>
+	<td>Request would exceed quota for type: autoscalingroup</td>
 	<td></td>
 </tr>
 <tr>
@@ -103,23 +137,8 @@
 </tr>
 <tr>
 	<td>assertEval</td>
-	<td>${tcount1}+1==${tcount2}</td>
+	<td>${tcount1} + 1==${tcount2}</td>
 	<td>true</td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>css=i.fi-widget</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>link=Release to cloud</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=release_ip_submit_button</td>
-	<td></td>
 </tr>
 </tbody></table>
 </body>
