Added open / to prevent logout problems

--- a/tests/selenium/KOALA/IAM_Users/user_1-logout.html
+++ b/tests/selenium/KOALA/IAM_Users/user_1-logout.html
@@ -21,6 +21,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>open</td>
+	<td>/</td>
+	<td></td>
+</tr>
+<tr>
 	<td>assertVisible</td>
 	<td>link=${user_1}@ui-test-acct-00</td>
 	<td></td>
