--- a/tests/selenium/VOLUME_OPERATIONS.html
+++ b/tests/selenium/VOLUME_OPERATIONS.html
@@ -8,40 +8,40 @@
 <body>
 <table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"><tbody>
 <tr><td><b>Test Suite</b></td></tr>
-<tr><td><a href="KOALA/koala_login.html">koala_login</a></td></tr>
-<tr><td><a href="KOALA/StoreAndSet/store-availability-zones.html">store-availability-zones</a></td></tr>
-<tr><td><a href="KOALA/StoreAndSet/set-volume-size-to-2.html">set-volume-size-to-2</a></td></tr>
-<tr><td><a href="KOALA/StoreAndSet/set-availability-zone-to-first-on-list.html">set-availability-zone-to-first-on-list</a></td></tr>
-<tr><td><a href="KOALA/StoreAndSet/set-tag-data-short.html">set-tag-data-short</a></td></tr>
-<tr><td><a href="KOALA/Volumes/create-volume-from-dashboard.html">create-volume-from-dashboard</a></td></tr>
-<tr><td><a href="KOALA/Volumes/verify-volume-visible-on-lp.html">verify-volume-visible-on-lp</a></td></tr>
-<tr><td><a href="KOALA/StoreAndSet/store-volume-data-as-volume_1.html">store-volume-data-as-volume_1</a></td></tr>
-<tr><td><a href="KOALA/Keypairs/create-key-pair-from-landing-page.html">create-key-pair-from-landing-page</a></td></tr>
-<tr><td><a href="KOALA/Keypairs/verify-key-pair-was-created.html">verify-key-pair-was-created</a></td></tr>
-<tr><td><a href="KOALA/SecurityGroups/create-s-group-from-lp-with-RDP-SSH-cTCP-to-default-1-tag.html">create-s-group-from-lp-with-RDP-SSH-cTCP-to-default-1-tag</a></td></tr>
-<tr><td><a href="KOALA/StoreAndSet/set-instance-type-to-m1-medium.html">set-instance-type-to-m1-medium</a></td></tr>
-<tr><td><a href="KOALA/Instances/launch-instance-from-instances-lp.html">launch-instance-from-instances-lp</a></td></tr>
-<tr><td><a href="KOALA/Instances/verify-instance-is-running.html">verify-instance-is-running</a></td></tr>
-<tr><td><a href="KOALA/Volumes/attach-volume-to-instance-from-inst-detail-page.html">attach-volume-to-instance-from-inst-detail-page</a></td></tr>
-<tr><td><a href="KOALA/Volumes/verify-volume-status-is-attached-on-lp.html">verify-volume-status-is-attached-on-lp</a></td></tr>
-<tr><td><a href="KOALA/Volumes/detach-volume-on-its-detail-page.html">detach-volume-on-its-detail-page</a></td></tr>
-<tr><td><a href="KOALA/Volumes/verify-volume-status-is-available-on-lp.html">verify-volume-status-is-available-on-lp</a></td></tr>
-<tr><td><a href="KOALA/Volumes/attach-volume-from-volumes-lp.html">attach-volume-from-volumes-lp</a></td></tr>
-<tr><td><a href="KOALA/Volumes/verify-volume-status-is-attached-on-lp.html">verify-volume-status-is-attached-on-lp</a></td></tr>
-<tr><td><a href="KOALA/Volumes/create-volume-from-lp.html">create-volume-from-lp</a></td></tr>
-<tr><td><a href="KOALA/Instances/terminate-instance-from-detail-page.html">terminate-instance-from-detail-page</a></td></tr>
-<tr><td><a href="KOALA/Volumes/verify-volume-visible-on-lp.html">verify-volume-visible-on-lp</a></td></tr>
-<tr><td><a href="KOALA/Instances/verify-instance-is-terminated.html">verify-instance-is-terminated</a></td></tr>
-<tr><td><a href="KOALA/Keypairs/delete-key-pair-from-detail-page.html">delete-key-pair-from-detail-page</a></td></tr>
-<tr><td><a href="KOALA/Keypairs/verify-key-pair-was-deleted.html">verify-key-pair-was-deleted</a></td></tr>
-<tr><td><a href="KOALA/Volumes/delete-volume-on-detail-page.html">delete-volume-on-detail-page</a></td></tr>
-<tr><td><a href="KOALA/Volumes/verify-volume-status-is-deleted-on-lp.html">verify-volume-status-is-deleted-on-lp</a></td></tr>
-<tr><td><a href="KOALA/StoreAndSet/set-volume-data-to-volume_1.html">set-volume-data-to-volume_1</a></td></tr>
-<tr><td><a href="KOALA/Volumes/delete-volume-from-lp.html">delete-volume-from-lp</a></td></tr>
-<tr><td><a href="KOALA/Volumes/verify-volume-status-is-deleted-on-lp.html">verify-volume-status-is-deleted-on-lp</a></td></tr>
-<tr><td><a href="KOALA/SecurityGroups/delete-s-group-from-detail-page.html">delete-s-group-from-detail-page</a></td></tr>
-<tr><td><a href="KOALA/SecurityGroups/verify-s-group-not-present-on-lp.html">verify-s-group-not-present-on-lp</a></td></tr>
-<tr><td><a href="KOALA/koala_logout.html">koala_logout</a></td></tr>
+<tr><td><a href="tests/koala_login.html">koala_login</a></td></tr>
+<tr><td><a href="tests/StoreAndSet/store-availability-zones.html">store-availability-zones</a></td></tr>
+<tr><td><a href="tests/StoreAndSet/set-volume-size-to-2.html">set-volume-size-to-2</a></td></tr>
+<tr><td><a href="tests/StoreAndSet/set-availability-zone-to-first-on-list.html">set-availability-zone-to-first-on-list</a></td></tr>
+<tr><td><a href="tests/StoreAndSet/set-tag-data-short.html">set-tag-data-short</a></td></tr>
+<tr><td><a href="tests/Volumes/create-volume-from-dashboard.html">create-volume-from-dashboard</a></td></tr>
+<tr><td><a href="tests/Volumes/verify-volume-visible-on-lp.html">verify-volume-visible-on-lp</a></td></tr>
+<tr><td><a href="tests/StoreAndSet/store-volume-data-as-volume_1.html">store-volume-data-as-volume_1</a></td></tr>
+<tr><td><a href="tests/Keypairs/create-key-pair-from-landing-page.html">create-key-pair-from-landing-page</a></td></tr>
+<tr><td><a href="tests/Keypairs/verify-key-pair-was-created.html">verify-key-pair-was-created</a></td></tr>
+<tr><td><a href="tests/SecurityGroups/create-s-group-from-lp-with-RDP-SSH-cTCP-to-default-1-tag.html">create-s-group-from-lp-with-RDP-SSH-cTCP-to-default-1-tag</a></td></tr>
+<tr><td><a href="tests/StoreAndSet/set-instance-type-to-m1-medium.html">set-instance-type-to-m1-medium</a></td></tr>
+<tr><td><a href="tests/Instances/launch-instance-from-instances-lp.html">launch-instance-from-instances-lp</a></td></tr>
+<tr><td><a href="tests/Instances/verify-instance-is-running.html">verify-instance-is-running</a></td></tr>
+<tr><td><a href="tests/Volumes/attach-volume-to-instance-from-inst-detail-page.html">attach-volume-to-instance-from-inst-detail-page</a></td></tr>
+<tr><td><a href="tests/Volumes/verify-volume-status-is-attached-on-lp.html">verify-volume-status-is-attached-on-lp</a></td></tr>
+<tr><td><a href="tests/Volumes/detach-volume-on-its-detail-page.html">detach-volume-on-its-detail-page</a></td></tr>
+<tr><td><a href="tests/Volumes/verify-volume-status-is-available-on-lp.html">verify-volume-status-is-available-on-lp</a></td></tr>
+<tr><td><a href="tests/Volumes/attach-volume-from-volumes-lp.html">attach-volume-from-volumes-lp</a></td></tr>
+<tr><td><a href="tests/Volumes/verify-volume-status-is-attached-on-lp.html">verify-volume-status-is-attached-on-lp</a></td></tr>
+<tr><td><a href="tests/Volumes/create-volume-from-lp.html">create-volume-from-lp</a></td></tr>
+<tr><td><a href="tests/Instances/terminate-instance-from-detail-page.html">terminate-instance-from-detail-page</a></td></tr>
+<tr><td><a href="tests/Volumes/verify-volume-visible-on-lp.html">verify-volume-visible-on-lp</a></td></tr>
+<tr><td><a href="tests/Instances/verify-instance-is-terminated.html">verify-instance-is-terminated</a></td></tr>
+<tr><td><a href="tests/Keypairs/delete-key-pair-from-detail-page.html">delete-key-pair-from-detail-page</a></td></tr>
+<tr><td><a href="tests/Keypairs/verify-key-pair-was-deleted.html">verify-key-pair-was-deleted</a></td></tr>
+<tr><td><a href="tests/Volumes/delete-volume-on-detail-page.html">delete-volume-on-detail-page</a></td></tr>
+<tr><td><a href="tests/Volumes/verify-volume-status-is-deleted-on-lp.html">verify-volume-status-is-deleted-on-lp</a></td></tr>
+<tr><td><a href="tests/StoreAndSet/set-volume-data-to-volume_1.html">set-volume-data-to-volume_1</a></td></tr>
+<tr><td><a href="tests/Volumes/delete-volume-from-lp.html">delete-volume-from-lp</a></td></tr>
+<tr><td><a href="tests/Volumes/verify-volume-status-is-deleted-on-lp.html">verify-volume-status-is-deleted-on-lp</a></td></tr>
+<tr><td><a href="tests/SecurityGroups/delete-s-group-from-detail-page.html">delete-s-group-from-detail-page</a></td></tr>
+<tr><td><a href="tests/SecurityGroups/verify-s-group-not-present-on-lp.html">verify-s-group-not-present-on-lp</a></td></tr>
+<tr><td><a href="tests/koala_logout.html">koala_logout</a></td></tr>
 </tbody></table>
 </body>
 </html>
