Modified IAM_USER scripts to work with refactored code.
Conflicts:
	tests/selenium/KOALA/IAM_Users/add-monitor-access-to-user.html
	tests/selenium/KOALA/IAM_Users/add-monitor-access-to-user_1.html
	tests/selenium/KOALA/IAM_Users/create-user-with-no-password-no-policy.html
	tests/selenium/KOALA/IAM_Users/create-user-with-random-password-and-read-write-access.html
	tests/selenium/KOALA/IAM_Users/create-user_1-with-no-password-no-policy.html
	tests/selenium/KOALA/IAM_Users/create-user_2-with-random-password-and-read-write-access.html
	tests/selenium/KOALA/IAM_Users/delete-user.html
	tests/selenium/KOALA/IAM_Users/delete-user_1.html
	tests/selenium/KOALA/IAM_Users/verify-monitor-access-policy-to-user.html
	tests/selenium/KOALA/IAM_Users/verify-monitor-access-policy-to-user_1.html
	tests/selenium/KOALA/IAM_Users/verify-status-groups-passwords-access-key-for-user-on-launch-page.html
	tests/selenium/KOALA/IAM_Users/verify-status-groups-passwords-access-key-for-user_1-on-launch-page.html
	tests/selenium/KOALA/IAM_Users/verify-user-deleted.html
	tests/selenium/KOALA/IAM_Users/verify-user_1-deleted.html
	tests/selenium/tests/IAM_Users/add-monitor-access-to-user_1.html
	tests/selenium/tests/IAM_Users/create-user_1-with-no-password-no-policy.html
	tests/selenium/tests/IAM_Users/create-user_2-with-random-password-and-read-write-access.html
	tests/selenium/tests/IAM_Users/delete-user_1.html
	tests/selenium/tests/IAM_Users/verify-monitor-access-policy-to-user_1.html
	tests/selenium/tests/IAM_Users/verify-status-groups-passwords-access-key-for-user_1-on-launch-page.html
	tests/selenium/tests/IAM_Users/verify-user_1-deleted.html

--- a/tests/selenium/tests/IAM_Users/create-user-with-random-password-and-read-write-access.html
+++ b/tests/selenium/tests/IAM_Users/create-user-with-random-password-and-read-write-access.html
@@ -3,12 +3,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>iam-create-user-with-no-attributes</title>
+<title>create-user_2-with-random-password-and-read-write-access</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">iam-create-user-with-no-attributes</td></tr>
+<tr><td rowspan="1" colspan="3">create-user_2-with-random-password-and-read-write-access</td></tr>
 </thead><tbody>
 <tr>
 	<td>setSpeed</td>
@@ -68,7 +68,17 @@
 <tr>
 	<td>store</td>
 	<td>user-${str}</td>
-	<td>user_1</td>
+	<td>user</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>id=random_password</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>id=allow_all</td>
+	<td></td>
 </tr>
 <tr>
 	<td>click</td>
@@ -76,43 +86,13 @@
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
+	<td>click</td>
 	<td>id=create-user-btn</td>
 	<td></td>
 </tr>
 <tr>
-	<td>click</td>
-	<td>link=Security credentials</td>
-	<td></td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>id=new_password</td>
-	<td>foobar</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>id=new_password2</td>
-	<td>foobar</td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>id=save-password-btn</td>
-	<td></td>
-</tr>
-<tr>
-	<td>runScript</td>
-	<td>document.getElementById(&quot;password&quot;).value = &quot;mypassword0&quot;</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>css=#change-form &gt; div.row &gt; div &gt; input.button.expand</td>
-	<td></td>
-</tr>
-<tr>
 	<td>echo</td>
-	<td>${user_1}</td>
+	<td>${user}</td>
 	<td></td>
 </tr>
 </tbody></table>
