--- a/tests/selenium/tests/IAM_Users/IAM_USER.html
+++ b/tests/selenium/tests/IAM_Users/IAM_USER.html
@@ -10,23 +10,27 @@
 <tr><td><b>Test Suite</b></td></tr>
 <tr><td><a href="koala_login.html">koala_login</a></td></tr>
 <tr><td><a href="get_dashboard_counts.html">get-dashboard-counts</a></td></tr>
-<tr><td><a href="create-user_1-with-no-password-no-policy.html">create-user_1-with-no-key-no-password-no-policy</a></td></tr>
-<tr><td><a href="verify-user-was-created.html">verify-user_1-was-created</a></td></tr>
+<tr><td><a href="create-user-with-no-password-no-policy.html">create-user-with-no-key-no-password-no-policy</a></td></tr>
+<tr><td><a href="store-user-as-user_1.html">store-user-as-user_1</a></td></tr>
+<tr><td><a href="verify-user-was-created.html">verify-user-was-created</a></td></tr>
 <tr><td><a href="verify-users-number-increased-by-1.html">verify-users-number-increased-by-1</a></td></tr>
-<tr><td><a href="create-user-password.html">create-user_1-password</a></td></tr>
+<tr><td><a href="create-user-password.html">create-user-password</a></td></tr>
 <tr><td><a href="koala_logout.html">koala_logout</a></td></tr>
-<tr><td><a href="test-user-logon.html">test-user_1-logon</a></td></tr>
+<tr><td><a href="test-user-logon.html">test-user-logon</a></td></tr>
 <tr><td><a href="koala_login.html">koala_login</a></td></tr>
-<tr><td><a href="add-monitor-access-to-user_1.html">add-monitor-access-to-user_1</a></td></tr>
-<tr><td><a href="verify-monitor-access-policy-to-user_1.html">verify-monitor-access-policy-to-user_1</a></td></tr>
-<tr><td><a href="verify-status-groups-passwords-access-key-for-user_1-on-launch-page.html">verify-status-groups-passwords-access-key-for-user_1-on-launch-page</a></td></tr>
-<tr><td><a href="delete-user_1.html">delete-user_1</a></td></tr>
-<tr><td><a href="verify-user_1-deleted.html">verify-user_1-deleted</a></td></tr>
-<tr><td><a href="create-user_2-with-random-password-and-read-write-access.html">create-user_2-with-random-password-and-read-write-access</a></td></tr>
-<tr><td><a href="verify-user_2-was-created.html">verify-user_2-was-created</a></td></tr>
-<tr><td><a href="verify-status-groups-passwords-access-key-for-user_2-on-launch-page.html">verify-status-groups-passwords-access-key-for-user_2-on-launch-page</a></td></tr>
-<tr><td><a href="delete-user_2.html">delete-user_2</a></td></tr>
-<tr><td><a href="verify-user_2-deleted.html">verify-user_2-deleted</a></td></tr>
+<tr><td><a href="add-monitor-access-to-user.html">add-monitor-access-to-user</a></td></tr>
+<tr><td><a href="verify-monitor-access-policy-to-user.html">verify-monitor-access-policy-to-user</a></td></tr>
+<tr><td><a href="verify-status-groups-passwords-access-key-for-user-on-launch-page.html">verify-status-groups-passwords-access-key-for-user-on-launch-page</a></td></tr>
+<tr><td><a href="set-user-data-to-user_1.html">set-user-to-user_1</a></td></tr>
+<tr><td><a href="delete-user.html">delete-user</a></td></tr>
+<tr><td><a href="verify-user-deleted.html">verify-user-deleted</a></td></tr>
+<tr><td><a href="create-user-with-random-password-and-read-write-access.html">create-user-with-random-password-and-read-write-access</a></td></tr>
+<tr><td><a href="store-user-as-user_2.html">store-user-as-user_2</a></td></tr>
+<tr><td><a href="verify-user-was-created.html">verify-user-was-created</a></td></tr>
+<tr><td><a href="verify-status-groups-passwords-access-key-for-user-on-launch-page.html">verify-status-groups-passwords-access-key-for-user-on-launch-page</a></td></tr>
+<tr><td><a href="set-user-data-to-user_1.html">set-user-data-to-user_2</a></td></tr>
+<tr><td><a href="delete-user.html">delete-user</a></td></tr>
+<tr><td><a href="verify-user-deleted.html">verify-user-deleted</a></td></tr>
 <tr><td><a href="koala_logout.html">koala_logout</a></td></tr>
 </tbody></table>
 </body>
