--- a/tests/selenium/tests/IAM_Users/create-user-password.html
+++ b/tests/selenium/tests/IAM_Users/create-user-password.html
@@ -37,17 +37,17 @@
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>link=${user_1}</td>
+	<td>link=${user}</td>
 	<td></td>
 </tr>
 <tr>
 	<td>assertVisible</td>
-	<td>link=${user_1}</td>
+	<td>link=${user}</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=${user_1}</td>
+	<td>link=${user}</td>
 	<td></td>
 </tr>
 <tr>
