--- a/tests/selenium/tests/IAM_Users/delete-user.html
+++ b/tests/selenium/tests/IAM_Users/delete-user.html
@@ -3,12 +3,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>create-user_2-with-random-password-and-read-write-access</title>
+<title>delete-user_1</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">create-user_2-with-random-password-and-read-write-access</td></tr>
+<tr><td rowspan="1" colspan="3">delete-user_1</td></tr>
 </thead><tbody>
 <tr>
 	<td>setSpeed</td>
@@ -36,63 +36,33 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForVisible</td>
+	<td>link=${user}</td>
+	<td></td>
+</tr>
+<tr>
 	<td>assertVisible</td>
-	<td>id=add-user-btn</td>
+	<td>link=${user}</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>id=add-user-btn</td>
-	<td></td>
-</tr>
-<tr>
-	<td>storeEval</td>
-	<td>(Math.random().toString(36)+&quot;000000000&quot;).slice(2,7);</td>
-	<td>str</td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>id=user-name-field</td>
-	<td></td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>id=user-name-field</td>
-	<td>user-${str}</td>
-</tr>
-<tr>
-	<td>typeKeys</td>
-	<td>id=user-name-field</td>
-	<td>user-${str}</td>
-</tr>
-<tr>
-	<td>store</td>
-	<td>user-${str}</td>
-	<td>user_2</td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>id=random_password</td>
+	<td>link=${user}</td>
 	<td></td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>id=allow_all</td>
+	<td>css=span.button.dropdown</td>
 	<td></td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>id=add-user-btn</td>
+	<td>id=delete-user-action</td>
 	<td></td>
 </tr>
 <tr>
-	<td>click</td>
-	<td>id=create-user-btn</td>
-	<td></td>
-</tr>
-<tr>
-	<td>echo</td>
-	<td>${user_2}</td>
+	<td>clickAndWait</td>
+	<td>id=delete_user_submit_button</td>
 	<td></td>
 </tr>
 </tbody></table>
