--- a/tests/selenium/tests/IAM_Users/verify-status-groups-passwords-access-key-for-user-on-launch-page.html
+++ b/tests/selenium/tests/IAM_Users/verify-status-groups-passwords-access-key-for-user-on-launch-page.html
@@ -3,12 +3,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>verify-status-groups-passwords-access-key-on-launch-page</title>
+<title>verify-status-groups-passwords-access-key-for-user_2-on-launch-page</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">verify-status-groups-passwords-access-key-on-launch-page</td></tr>
+<tr><td rowspan="1" colspan="3">verify-status-groups-passwords-access-key-for-user_2-on-launch-page</td></tr>
 </thead><tbody>
 <tr>
 	<td>setSpeed</td>
@@ -37,57 +37,57 @@
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>link=${user_1}</td>
+	<td>link=${user}</td>
 	<td></td>
 </tr>
 <tr>
 	<td>assertVisible</td>
-	<td>link=${user_1}</td>
+	<td>link=${user}</td>
 	<td></td>
 </tr>
 <tr>
 	<td>storeText</td>
-	<td>//div[@id='tableview']/table/tbody/tr/td/a[@href='/users/${user_1}']/../../td[2]/span</td>
-	<td>status_1</td>
+	<td>//div[@id='tableview']/table/tbody/tr/td/a[@href='/users/${user}']/../../td[2]/span</td>
+	<td>user_status</td>
 </tr>
 <tr>
 	<td>storeText</td>
-	<td>//div[@id='tableview']/table/tbody/tr/td/a[@href='/users/${user_1}']/../../td[3]</td>
-	<td>groups_1</td>
+	<td>//div[@id='tableview']/table/tbody/tr/td/a[@href='/users/${user}']/../../td[3]</td>
+	<td>user_groups</td>
 </tr>
 <tr>
 	<td>storeText</td>
-	<td>//div[@id='tableview']/table/tbody/tr/td/a[@href='/users/${user_1}']/../../td[4]/span</td>
-	<td>password_1</td>
+	<td>//div[@id='tableview']/table/tbody/tr/td/a[@href='/users/${user}']/../../td[4]/span</td>
+	<td>user_password</td>
 </tr>
 <tr>
 	<td>storeText</td>
-	<td>//div[@id='tableview']/table/tbody/tr/td/a[@href='/users/${user_1}']/../../td[5]/span</td>
-	<td>accesskeys_1</td>
+	<td>//div[@id='tableview']/table/tbody/tr/td/a[@href='/users/${user}']/../../td[5]/span</td>
+	<td>user_accesskeys</td>
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//div[@id='tableview']/table/tbody/tr/td/a[@href='/users/${user_1}']/../../td[2]/span</td>
+	<td>//div[@id='tableview']/table/tbody/tr/td/a[@href='/users/${user}']/../../td[2]/span</td>
 	<td>Active</td>
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//div[@id='tableview']/table/tbody/tr/td/a[@href='/users/${user_1}']/../../td[3]</td>
+	<td>//div[@id='tableview']/table/tbody/tr/td/a[@href='/users/${user}']/../../td[3]</td>
 	<td>0</td>
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//div[@id='tableview']/table/tbody/tr/td/a[@href='/users/${user_1}']/../../td[4]/span</td>
+	<td>//div[@id='tableview']/table/tbody/tr/td/a[@href='/users/${user}']/../../td[4]/span</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyText</td>
-	<td>//div[@id='tableview']/table/tbody/tr/td/a[@href='/users/${user_1}']/../../td[5]/span</td>
+	<td>//div[@id='tableview']/table/tbody/tr/td/a[@href='/users/${user}']/../../td[5]/span</td>
 	<td>0 active</td>
 </tr>
 <tr>
 	<td>echo</td>
-	<td>Status: ${status_1}, Groups: ${groups_1}, Password: ${password_1}, Keys: ${accesskeys_1}</td>
+	<td>Status: ${user_status}, Groups: ${user_groups}, Password: ${user_password}, Keys: ${user_accesskeys}</td>
 	<td></td>
 </tr>
 </tbody></table>
