--- a/tests/selenium/tests/IAM_Users/verify-user-deleted.html
+++ b/tests/selenium/tests/IAM_Users/verify-user-deleted.html
@@ -3,12 +3,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>add-monitor-access-to-user_1</title>
+<title>verify-user_1-deleted</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">add-monitor-access-to-user_1</td></tr>
+<tr><td rowspan="1" colspan="3">verify-user_1-deleted</td></tr>
 </thead><tbody>
 <tr>
 	<td>setSpeed</td>
@@ -36,33 +36,13 @@
 	<td></td>
 </tr>
 <tr>
-	<td>waitForVisible</td>
-	<td>link=${user_1}</td>
+	<td>waitForTextNotPresent</td>
+	<td>${user}</td>
 	<td></td>
 </tr>
 <tr>
-	<td>assertVisible</td>
-	<td>link=${user_1}</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=${user_1}</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=add-policy-btn</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>xpath=(//a[contains(text(),'Select')])[3]</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=create-iam-policy-btn</td>
+	<td>verifyTextNotPresent</td>
+	<td>{$user}</td>
 	<td></td>
 </tr>
 </tbody></table>
