--- a/tests/selenium/tests/IAM_Users/verify-user-was-created.html
+++ b/tests/selenium/tests/IAM_Users/verify-user-was-created.html
@@ -37,22 +37,22 @@
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>link=${user_1}</td>
+	<td>link=${user}</td>
 	<td></td>
 </tr>
 <tr>
 	<td>assertVisible</td>
-	<td>link=${user_1}</td>
+	<td>link=${user}</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyElementPresent</td>
-	<td>link=${user_1}</td>
+	<td>link=${user}</td>
 	<td></td>
 </tr>
 <tr>
 	<td>echo</td>
-	<td>${user_1}</td>
+	<td>${user}</td>
 	<td></td>
 </tr>
 </tbody></table>
