Moving IAM directory structure

--- a/tests/selenium/tests/IAM_Users/create-user_1-with-no-password-no-policy.html
+++ b/tests/selenium/tests/IAM_Users/create-user_1-with-no-password-no-policy.html
@@ -3,12 +3,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>verify-user_1-monitor-only-policy</title>
+<title>iam-create-user-with-no-attributes</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">verify-user_1-monitor-only-policy</td></tr>
+<tr><td rowspan="1" colspan="3">iam-create-user-with-no-attributes</td></tr>
 </thead><tbody>
 <tr>
 	<td>setSpeed</td>
@@ -18,11 +18,6 @@
 <tr>
 	<td>setTimeout</td>
 	<td>120000</td>
-	<td></td>
-</tr>
-<tr>
-	<td>selectWindow</td>
-	<td>null</td>
 	<td></td>
 </tr>
 <tr>
@@ -41,49 +36,54 @@
 	<td></td>
 </tr>
 <tr>
+	<td>assertVisible</td>
+	<td>id=add-user-btn</td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
-	<td>link=${user_1}</td>
+	<td>id=add-user-btn</td>
+	<td></td>
+</tr>
+<tr>
+	<td>storeEval</td>
+	<td>(Math.random().toString(36)+&quot;000000000&quot;).slice(2,7);</td>
+	<td>str</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>id=user-name-field</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=user-name-field</td>
+	<td>user-${str}</td>
+</tr>
+<tr>
+	<td>typeKeys</td>
+	<td>id=user-name-field</td>
+	<td>user-${str}</td>
+</tr>
+<tr>
+	<td>store</td>
+	<td>user-${str}</td>
+	<td>user_1</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>id=add-user-btn</td>
 	<td></td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>link=Quotas</td>
+	<td>id=create-user-btn</td>
 	<td></td>
 </tr>
 <tr>
-	<td>click</td>
-	<td>link=EC2</td>
+	<td>echo</td>
+	<td>${user_1}</td>
 	<td></td>
-</tr>
-<tr>
-	<td>verifyValue</td>
-	<td>id=ec2_images_max</td>
-	<td>${ec2_images}</td>
-</tr>
-<tr>
-	<td>verifyValue</td>
-	<td>id=ec2_instances_max</td>
-	<td>${ec2_instances}</td>
-</tr>
-<tr>
-	<td>verifyValue</td>
-	<td>id=ec2_volumes_max</td>
-	<td>${ec2_volumes}</td>
-</tr>
-<tr>
-	<td>verifyValue</td>
-	<td>id=ec2_total_size_all_vols</td>
-	<td>${ec2_volume_size}</td>
-</tr>
-<tr>
-	<td>verifyValue</td>
-	<td>id=ec2_snapshots_max</td>
-	<td>${ec2_snapshots}</td>
-</tr>
-<tr>
-	<td>verifyValue</td>
-	<td>id=ec2_elastic_ip_max</td>
-	<td>${ec2_elastic_ip}</td>
 </tr>
 </tbody></table>
 </body>
