--- a/tests/selenium/tests/IAM_Users/delete-user_1.html
+++ b/tests/selenium/tests/IAM_Users/delete-user_1.html
@@ -3,13 +3,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="selenium.base" href="http://10.111.5.170:8888/" />
-<title>verify-group_1-deleted</title>
+<title>delete-user_1</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">verify-group_1-deleted</td></tr>
+<tr><td rowspan="1" colspan="3">delete-user_1</td></tr>
 </thead><tbody>
 <tr>
 	<td>setSpeed</td>
@@ -33,17 +32,37 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>id=resource-menuitem-groups</td>
+	<td>id=resource-menuitem-users</td>
 	<td></td>
 </tr>
 <tr>
-	<td>pause</td>
-	<td>2000</td>
+	<td>waitForVisible</td>
+	<td>link=${user_1}</td>
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextNotPresent</td>
-	<td>{$group_1}</td>
+	<td>assertVisible</td>
+	<td>link=${user_1}</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=${user_1}</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>css=span.button.dropdown</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>id=delete-user-action</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=delete_user_submit_button</td>
 	<td></td>
 </tr>
 </tbody></table>
