--- a/tests/selenium/tests/IAM_Users/verify-user_1-deleted.html
+++ b/tests/selenium/tests/IAM_Users/verify-user_1-deleted.html
@@ -3,12 +3,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>verify-user_1-monitor-only-policy</title>
+<title>verify-user_1-deleted</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">verify-user_1-monitor-only-policy</td></tr>
+<tr><td rowspan="1" colspan="3">verify-user_1-deleted</td></tr>
 </thead><tbody>
 <tr>
 	<td>setSpeed</td>
@@ -18,11 +18,6 @@
 <tr>
 	<td>setTimeout</td>
 	<td>120000</td>
-	<td></td>
-</tr>
-<tr>
-	<td>selectWindow</td>
-	<td>null</td>
 	<td></td>
 </tr>
 <tr>
@@ -41,39 +36,14 @@
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=${user_1}</td>
+	<td>waitForTextNotPresent</td>
+	<td>${user_1}</td>
 	<td></td>
 </tr>
 <tr>
-	<td>click</td>
-	<td>link=Quotas</td>
+	<td>verifyTextNotPresent</td>
+	<td>{$user_1}</td>
 	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>link=S3/Walrus</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyValue</td>
-	<td>id=s3_buckets_max</td>
-	<td>${s3_buckets}</td>
-</tr>
-<tr>
-	<td>verifyValue</td>
-	<td>id=s3_objects_per_max</td>
-	<td>${s3_objects}</td>
-</tr>
-<tr>
-	<td>verifyValue</td>
-	<td>id=s3_bucket_size</td>
-	<td>${s3_bucket_size}</td>
-</tr>
-<tr>
-	<td>verifyValue</td>
-	<td>id=s3_total_size_all_buckets</td>
-	<td>${s3_total_size}</td>
 </tr>
 </tbody></table>
 </body>
