Adding IAM test cases

--- a/tests/selenium/IAM_GROUPS.html
+++ b/tests/selenium/IAM_GROUPS.html
@@ -8,7 +8,7 @@
 <body>
 <table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"><tbody>
 <tr><td><b>Test Suite</b></td></tr>
-<tr><td><a href="tests/IAM_Groups/koala_login.html">koala_login</a></td></tr>
+<tr><td><a href="tests/koala_login.html">koala_login</a></td></tr>
 <tr><td><a href="tests/IAM_Groups/get_dashboard_counts.html">get_dashboard_counts</a></td></tr>
 <tr><td><a href="tests/IAM_Groups/create-user_1-with-no-password-no-policy.html">create-user_1-with-no-key-no-password-no-policy</a></td></tr>
 <tr><td><a href="tests/IAM_Groups/verify-user-was-created.html">verify-user_1-created</a></td></tr>
@@ -22,7 +22,7 @@
 <tr><td><a href="tests/IAM_Groups/verify-user_1-deleted-from-group_1.html">verify-user_1-deleted-from-group_1</a></td></tr>
 <tr><td><a href="tests/IAM_Groups/delete-group_1.html">delete-group_1</a></td></tr>
 <tr><td><a href="tests/IAM_Groups/verify-group_1-deleted.html">verify-group_1-deleted</a></td></tr>
-<tr><td><a href="tests/IAM_Groups/koala_logout.html">koala_logout</a></td></tr>
+<tr><td><a href="tests/koala_logout.html">koala_logout</a></td></tr>
 </tbody></table>
 </body>
 </html>
