--- a/tests/selenium/tests/IAM_Users/create_s3_quotas.html
+++ b/tests/selenium/tests/IAM_Users/create_s3_quotas.html
@@ -62,7 +62,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>css=span.title &gt; a &gt; span</td>
+	<td>css=#s3-section &gt; span.title &gt; a &gt; i.fi-plus</td>
 	<td></td>
 </tr>
 <tr>
