--- a/tests/selenium/tests/IAM_Users/delete-user.html
+++ b/tests/selenium/tests/IAM_Users/delete-user.html
@@ -65,6 +65,11 @@
 	<td>id=delete_user_submit_button</td>
 	<td></td>
 </tr>
+<tr>
+	<td>echo</td>
+	<td>${user}</td>
+	<td></td>
+</tr>
 </tbody></table>
 </body>
 </html>
