--- a/tests/selenium/tests/IAM_Users/test-user-logon.html
+++ b/tests/selenium/tests/IAM_Users/test-user-logon.html
@@ -61,6 +61,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>pause</td>
+	<td>1000</td>
+	<td></td>
+</tr>
+<tr>
 	<td>assertVisible</td>
 	<td>id=euca-login-button</td>
 	<td></td>
