--- a/tests/selenium/tests/IAM_Users/verify-user-access-policy-to-user_1.html
+++ b/tests/selenium/tests/IAM_Users/verify-user-access-policy-to-user_1.html
@@ -37,27 +37,27 @@
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>link=${user_1}</td>
+	<td>link=${user}</td>
 	<td></td>
 </tr>
 <tr>
 	<td>assertVisible</td>
-	<td>link=${user_1}</td>
+	<td>link=${user}</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=${user_1}</td>
+	<td>link=${user}</td>
 	<td></td>
 </tr>
 <tr>
 	<td>waitForTextPresent</td>
-	<td>PowerUserAccessPolicy-${user_1}</td>
+	<td>PowerUserAccessPolicy-${user}</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>PowerUserAccessPolicy-${user_1}</td>
+	<td>PowerUserAccessPolicy-${user}</td>
 	<td></td>
 </tr>
 </tbody></table>
