--- a/tests/selenium/tests/IAM_Users/verify-user_1-deleted.html
+++ b/tests/selenium/tests/IAM_Users/verify-user_1-deleted.html
@@ -37,12 +37,12 @@
 </tr>
 <tr>
 	<td>waitForTextNotPresent</td>
-	<td>${user_1}</td>
+	<td>${user}</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextNotPresent</td>
-	<td>{$user_1}</td>
+	<td>{$user}</td>
 	<td></td>
 </tr>
 </tbody></table>
