--- a/tests/selenium/IAM_USER.html
+++ b/tests/selenium/IAM_USER.html
@@ -8,16 +8,16 @@
 <body>
 <table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"><tbody>
 <tr><td><b>Test Suite</b></td></tr>
-<tr><td><a href="tests/IAM_Users/koala_login.html">koala_login</a></td></tr>
+<tr><td><a href="tests/koala_login.html">koala_login</a></td></tr>
 <tr><td><a href="tests/IAM_Users/get_dashboard_counts.html">get-dashboard-counts</a></td></tr>
 <tr><td><a href="tests/IAM_Users/create-user-with-no-password-no-policy.html">create-user-with-no-key-no-password-no-policy</a></td></tr>
 <tr><td><a href="tests/StoreAndSet/store-user-as-user_1.html">store-user-as-user_1</a></td></tr>
 <tr><td><a href="tests/IAM_Users/verify-user-was-created.html">verify-user-was-created</a></td></tr>
 <tr><td><a href="tests/IAM_Users/verify-users-number-increased-by-1.html">verify-users-number-increased-by-1</a></td></tr>
 <tr><td><a href="tests/IAM_Users/create-user-password.html">create-user-password</a></td></tr>
-<tr><td><a href="tests/IAM_Users/koala_logout.html">koala_logout</a></td></tr>
+<tr><td><a href="tests/koala_logout.html">koala_logout</a></td></tr>
 <tr><td><a href="tests/IAM_Users/test-user-logon.html">test-user-logon</a></td></tr>
-<tr><td><a href="tests/IAM_Users/koala_login.html">koala_login</a></td></tr>
+<tr><td><a href="tests/koala_login.html">koala_login</a></td></tr>
 <tr><td><a href="tests/IAM_Users/add-monitor-access-to-user.html">add-monitor-access-to-user</a></td></tr>
 <tr><td><a href="tests/IAM_Users/verify-monitor-access-policy-to-user.html">verify-monitor-access-policy-to-user</a></td></tr>
 <tr><td><a href="tests/IAM_Users/verify-status-groups-passwords-access-key-for-user-on-launch-page.html">verify-status-groups-passwords-access-key-for-user-on-launch-page</a></td></tr>
@@ -31,7 +31,7 @@
 <tr><td><a href="tests/StoreAndSet/set-user-data-to-user_1.html">set-user-data-to-user_2</a></td></tr>
 <tr><td><a href="tests/IAM_Users/delete-user.html">delete-user</a></td></tr>
 <tr><td><a href="tests/IAM_Users/verify-user-deleted.html">verify-user-deleted</a></td></tr>
-<tr><td><a href="tests/IAM_Users/koala_logout.html">koala_logout</a></td></tr>
+<tr><td><a href="tests/koala_logout.html">koala_logout</a></td></tr>
 </tbody></table>
 </body>
 </html>
