--- a/tests/selenium/IAM_USER_AS_QUOTAS.html
+++ b/tests/selenium/IAM_USER_AS_QUOTAS.html
@@ -8,7 +8,7 @@
 <body>
 <table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"><tbody>
 <tr><td><b>Test Suite</b></td></tr>
-<tr><td><a href="tests/IAM_Users/koala_login.html">koala_login</a></td></tr>
+<tr><td><a href="tests/koala_login.html">koala_login</a></td></tr>
 <tr><td><a href="tests/IAM_Users/get_dashboard_counts.html">get-dashboard-counts</a></td></tr>
 <tr><td><a href="tests/IAM_Users/create-user_1-with-password-no-policy.html">create-user_1-with-password-no-policy</a></td></tr>
 <tr><td><a href="tests/IAM_Users/verify-user-was-created.html">verify-user_1-was-created</a></td></tr>
@@ -17,16 +17,16 @@
 <tr><td><a href="tests/IAM_Users/verify-user-access-policy-to-user_1.html">verify-user-access-policy-to-user_1</a></td></tr>
 <tr><td><a href="tests/IAM_Users/create-as-quotas.html">create-as-quotas</a></td></tr>
 <tr><td><a href="tests/IAM_Users/verify-as-quota-values.html">verify-as-quota-values</a></td></tr>
-<tr><td><a href="tests/IAM_Users/koala_logout.html">koala_logout</a></td></tr>
+<tr><td><a href="tests/koala_logout.html">koala_logout</a></td></tr>
 <tr><td><a href="tests/IAM_Users/user_1-logon.html">user_1-logon</a></td></tr>
 <tr><td><a href="tests/IAM_Users/verify-as-launch-config-quota.html">verify-as-launch-config-quota</a></td></tr>
 <tr><td><a href="tests/IAM_Users/verify-as-scaling-group-config-quota.html">verify-as-scaling-group-config-quota</a></td></tr>
 <tr><td><a href="tests/IAM_Users/verify-as-scale-policy-quota.html">verify-as-scale-policy-quota</a></td></tr>
 <tr><td><a href="tests/IAM_Users/user_1-logout.html">user_1-logout</a></td></tr>
-<tr><td><a href="tests/IAM_Users/koala_login.html">koala_login</a></td></tr>
+<tr><td><a href="tests/koala_login.html">koala_login</a></td></tr>
 <tr><td><a href="tests/IAM_Users/delete-user_1.html">delete-user_1</a></td></tr>
 <tr><td><a href="tests/IAM_Users/verify-user_1-deleted.html">verify-user_1-deleted</a></td></tr>
-<tr><td><a href="tests/IAM_Users/koala_logout.html">koala_logout</a></td></tr>
+<tr><td><a href="tests/koala_logout.html">koala_logout</a></td></tr>
 </tbody></table>
 </body>
 </html>
