--- a/tests/selenium/IAM_USER_ELB_QUOTA.html
+++ b/tests/selenium/IAM_USER_ELB_QUOTA.html
@@ -8,23 +8,19 @@
 <body>
 <table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"><tbody>
 <tr><td><b>Test Suite</b></td></tr>
-<tr><td><a href="tests/IAM_Users/koala_login.html">koala_login</a></td></tr>
+<tr><td><a href="tests/koala_login.html">koala_login</a></td></tr>
 <tr><td><a href="tests/IAM_Users/get_dashboard_counts.html">get-dashboard-counts</a></td></tr>
 <tr><td><a href="tests/IAM_Users/create-user_1-with-password-no-policy.html">create-user_1-with-password-no-policy</a></td></tr>
+<tr><td><a href="tests/StoreAndSet/set-user-data-to-user_1.html">set-user-data-to-user_1</a></td></tr>
 <tr><td><a href="tests/IAM_Users/verify-user-was-created.html">verify-user_1-was-created</a></td></tr>
 <tr><td><a href="tests/IAM_Users/verify-users-number-increased-by-1.html">verify-users-number-increased-by-1</a></td></tr>
-<tr><td><a href="tests/IAM_Users/add-user-access-to-user_1.html">add-user-access-to-user_1</a></td></tr>
-<tr><td><a href="tests/IAM_Users/verify-user-access-policy-to-user_1.html">verify-user-access-policy-to-user_1</a></td></tr>
+<tr><td><a href="tests/IAM_Users/add-user-access-to-user_1.html">add-user-access-to-user</a></td></tr>
+<tr><td><a href="tests/IAM_Users/verify-user-access-policy-to-user_1.html">verify-user-access-policy-to-user</a></td></tr>
 <tr><td><a href="tests/IAM_Users/create_elb_quotas.html">create-elb-quota</a></td></tr>
 <tr><td><a href="tests/IAM_Users/verify-elb-quota-value.html">verify-elb-quota-value</a></td></tr>
-<tr><td><a href="tests/IAM_Users/koala_logout.html">koala_logout</a></td></tr>
-<tr><td><a href="tests/IAM_Users/user_1-logon.html">user_1-logon</a></td></tr>
-<tr><td><a href="tests/IAM_Users/verify-elb-config-quota.html">verify-elb-config-quota</a></td></tr>
-<tr><td><a href="tests/IAM_Users/user_1-logout.html">user_1-logout</a></td></tr>
-<tr><td><a href="tests/IAM_Users/koala_login.html">koala_login</a></td></tr>
-<tr><td><a href="tests/IAM_Users/delete-user_1.html">delete-user_1</a></td></tr>
-<tr><td><a href="tests/IAM_Users/verify-user_1-deleted.html">verify-user_1-deleted</a></td></tr>
-<tr><td><a href="tests/IAM_Users/koala_logout.html">koala_logout</a></td></tr>
+<tr><td><a href="tests/IAM_Users/delete-user_1.html">delete-user</a></td></tr>
+<tr><td><a href="tests/IAM_Users/verify-user_1-deleted.html">verify-user-deleted</a></td></tr>
+<tr><td><a href="tests/koala_logout.html">koala_logout</a></td></tr>
 </tbody></table>
 </body>
 </html>
