--- a/tests/selenium/tests/IAM_Users/user_1-logout.html
+++ b/tests/selenium/tests/IAM_Users/user_1-logout.html
@@ -27,12 +27,12 @@
 </tr>
 <tr>
 	<td>assertVisible</td>
-	<td>link=${user_1}@ui-test-acct-00</td>
+	<td>link=${user}@ui-test-acct-00</td>
 	<td></td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>link=${user_1}@ui-test-acct-00</td>
+	<td>link=${user}@ui-test-acct-00</td>
 	<td></td>
 </tr>
 <tr>
