Modified create security group tests to match the new id of the create button

--- a/tests/selenium/tests/SecurityGroups/create-s-group-from-lp-with-RDP-SSH-cTCP-to-default-1-tag.html
+++ b/tests/selenium/tests/SecurityGroups/create-s-group-from-lp-with-RDP-SSH-cTCP-to-default-1-tag.html
@@ -197,8 +197,8 @@
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>id=save-securitygroup-btn</td>
+	<td>click</td>
+	<td>id=create-securitygroup-btn</td>
 	<td></td>
 </tr>
 <tr>
