Fixed selection from chosen widget in tests/IAM_Groups/add-user_1-to-group_1.html

--- a/tests/selenium/tests/IAM_Groups/add-user_1-to-group_1.html
+++ b/tests/selenium/tests/IAM_Groups/add-user_1-to-group_1.html
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>setSpeed</td>
-	<td>500</td>
+	<td>700</td>
 	<td></td>
 </tr>
 <tr>
@@ -52,24 +52,19 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>css=li.search-field &gt; input[type=&quot;text&quot;]</td>
-	<td>${user_1}</td>
+	<td>clickAt</td>
+	<td>//div[@id=&quot;users_select_chosen&quot;]/ul</td>
+	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>css=li.search-field &gt; input[type=&quot;text&quot;]</td>
-	<td>${user_1}</td>
-</tr>
-<tr>
-	<td>typeKeys</td>
-	<td>css=li.search-field &gt; input[type=&quot;text&quot;]</td>
-	<td>${user_1}</td>
+	<td>click</td>
+	<td>//div[@id=&quot;users_select_chosen&quot;]/ul</td>
+	<td></td>
 </tr>
 <tr>
 	<td>sendKeys</td>
-	<td>css=li.search-field &gt; input[type=&quot;text&quot;]</td>
-	<td>${KEY_ENTER}</td>
+	<td>//div[@id=&quot;users_select_chosen&quot;]/ul/li/input</td>
+	<td>${user_1}</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
