Fixed selection from chosen widget in tests/IAM_Groups/add-user_1-to-group_1.html

--- a/tests/selenium/tests/IAM_Groups/add-user_1-to-group_1.html
+++ b/tests/selenium/tests/IAM_Groups/add-user_1-to-group_1.html
@@ -62,6 +62,11 @@
 	<td></td>
 </tr>
 <tr>
+	<td>select</td>
+	<td>name=input-users-select</td>
+	<td>value=${user_1}</td>
+</tr>
+<tr>
 	<td>sendKeys</td>
 	<td>//div[@id=&quot;users_select_chosen&quot;]/ul/li/input</td>
 	<td>${user_1}</td>
