Updating IAM/EC2 test suite/cases

--- a/tests/selenium/tests/IAM_Users/create-user_1-with-password-no-policy.html
+++ b/tests/selenium/tests/IAM_Users/create-user_1-with-password-no-policy.html
@@ -115,6 +115,16 @@
 	<td>${user_1}</td>
 	<td></td>
 </tr>
+<tr>
+	<td>storeText</td>
+	<td>id=notifications</td>
+	<td>breadcrumbs</td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>${breadcrumbs}</td>
+	<td></td>
+</tr>
 </tbody></table>
 </body>
 </html>
