--- a/tests/selenium/tests/IAM_Users/user-logout.html
+++ b/tests/selenium/tests/IAM_Users/user-logout.html
@@ -3,12 +3,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>iam-verify-user</title>
+<title>koala_logout</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">iam-verify-user</td></tr>
+<tr><td rowspan="1" colspan="3">koala_logout</td></tr>
 </thead><tbody>
 <tr>
 	<td>setSpeed</td>
@@ -17,52 +17,32 @@
 </tr>
 <tr>
 	<td>setTimeout</td>
-	<td>120000</td>
+	<td>60000</td>
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>id=resource-menu-dashboard</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>id=resource-menu-iam</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=resource-menuitem-users</td>
-	<td></td>
-</tr>
-<tr>
-	<td>waitForVisible</td>
-	<td>link=${user}</td>
+	<td>open</td>
+	<td>/</td>
 	<td></td>
 </tr>
 <tr>
 	<td>assertVisible</td>
-	<td>link=${user}</td>
+	<td>link=${user}@ui-test-acct-00</td>
 	<td></td>
 </tr>
 <tr>
-	<td>verifyElementPresent</td>
-	<td>link=${user}</td>
+	<td>click</td>
+	<td>link=${user}@ui-test-acct-00</td>
 	<td></td>
 </tr>
 <tr>
-	<td>echo</td>
-	<td>${user}</td>
+	<td>waitForVisible</td>
+	<td>id=logout</td>
 	<td></td>
 </tr>
 <tr>
-	<td>storeText</td>
-	<td>id=notifications</td>
-	<td>breadcrumbs</td>
-</tr>
-<tr>
-	<td>echo</td>
-	<td>${breadcrumbs}</td>
+	<td>clickAndWait</td>
+	<td>id=logout</td>
 	<td></td>
 </tr>
 </tbody></table>
