--- a/tests/selenium/tests/IAM_Users/verify-ec2-volume-size-quota.html
+++ b/tests/selenium/tests/IAM_Users/verify-ec2-volume-size-quota.html
@@ -90,6 +90,16 @@
 	<td>${tcount1}==${tcount2}</td>
 	<td>true</td>
 </tr>
+<tr>
+	<td>storeText</td>
+	<td>id=notifications</td>
+	<td>breadcrumbs</td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>${breadcrumbs}</td>
+	<td></td>
+</tr>
 </tbody></table>
 </body>
 </html>
