--- a/tests/selenium/tests/IAM_Users/user-logon.html
+++ b/tests/selenium/tests/IAM_Users/user-logon.html
@@ -3,12 +3,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>add-monitor-access-to-user_1</title>
+<title>user_1-monitor-only-policy-logon</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">add-monitor-access-to-user_1</td></tr>
+<tr><td rowspan="1" colspan="3">user_1-monitor-only-policy-logon</td></tr>
 </thead><tbody>
 <tr>
 	<td>setSpeed</td>
@@ -21,59 +21,49 @@
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>id=resource-menu-dashboard</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>id=resource-menu-iam</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=resource-menuitem-users</td>
-	<td></td>
-</tr>
-<tr>
-	<td>waitForVisible</td>
-	<td>link=${user}</td>
+	<td>open</td>
+	<td>/</td>
 	<td></td>
 </tr>
 <tr>
 	<td>assertVisible</td>
-	<td>link=${user}</td>
+	<td>id=account</td>
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=${user}</td>
+	<td>type</td>
+	<td>id=account</td>
+	<td>ui-test-acct-00</td>
+</tr>
+<tr>
+	<td>waitForVisible</td>
+	<td>id=username</td>
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>id=add-policy-btn</td>
-	<td></td>
+	<td>type</td>
+	<td>id=username</td>
+	<td>${user}</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=password</td>
+	<td>foobar</td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>xpath=(//a[contains(text(),'Select')])[2]</td>
+	<td>id=euca-login-button</td>
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>id=create-iam-policy-btn</td>
+	<td>waitForVisible</td>
+	<td>link=Launch Instance</td>
 	<td></td>
 </tr>
 <tr>
-	<td>storeText</td>
-	<td>id=notifications</td>
-	<td>breadcrumbs</td>
-</tr>
-<tr>
-	<td>echo</td>
-	<td>${breadcrumbs}</td>
-	<td></td>
+	<td>assertText</td>
+	<td>link=Launch Instance</td>
+	<td>Launch Instance</td>
 </tr>
 </tbody></table>
 </body>
