--- a/tests/selenium/tests/IAM_Users/verify-ec2-allocate-elastic-ip-address-quota.html
+++ b/tests/selenium/tests/IAM_Users/verify-ec2-allocate-elastic-ip-address-quota.html
@@ -121,6 +121,16 @@
 	<td>id=release_ip_submit_button</td>
 	<td></td>
 </tr>
+<tr>
+	<td>storeText</td>
+	<td>id=notifications</td>
+	<td>breadcrumbs</td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>${breadcrumbs}</td>
+	<td></td>
+</tr>
 </tbody></table>
 </body>
 </html>
