--- a/tests/selenium/tests/IAM_Users/verify-ec2-instance-quota.html
+++ b/tests/selenium/tests/IAM_Users/verify-ec2-instance-quota.html
@@ -37,7 +37,7 @@
 </tr>
 <tr>
 	<td>waitForTextPresent</td>
-	<td>items found</td>
+	<td>Eucalyptus Systems</td>
 	<td></td>
 </tr>
 <tr>
@@ -277,7 +277,7 @@
 </tr>
 <tr>
 	<td>waitForTextPresent</td>
-	<td>items found</td>
+	<td>Eucalyptus Systems</td>
 	<td></td>
 </tr>
 <tr>
@@ -289,6 +289,16 @@
 	<td>assertEval</td>
 	<td>${tcount1}==${tcount2}</td>
 	<td>true</td>
+</tr>
+<tr>
+	<td>storeText</td>
+	<td>id=notifications</td>
+	<td>breadcrumbs</td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>${breadcrumbs}</td>
+	<td></td>
 </tr>
 </tbody></table>
 </body>
