--- a/tests/selenium/tests/IAM_Users/verify-ec2-snapshot-quota.html
+++ b/tests/selenium/tests/IAM_Users/verify-ec2-snapshot-quota.html
@@ -156,6 +156,16 @@
 	<td>id=delete_snapshot_submit_button</td>
 	<td></td>
 </tr>
+<tr>
+	<td>storeText</td>
+	<td>id=notifications</td>
+	<td>breadcrumbs</td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>${breadcrumbs}</td>
+	<td></td>
+</tr>
 </tbody></table>
 </body>
 </html>
