--- a/tests/selenium/tests/IAM_Users/verify-ec2-volume-quota.html
+++ b/tests/selenium/tests/IAM_Users/verify-ec2-volume-quota.html
@@ -41,7 +41,7 @@
 	<td></td>
 </tr>
 <tr>
-	<td>waitForTextPresent</td>
+	<td>waitForText</td>
 	<td>items found</td>
 	<td></td>
 </tr>
@@ -119,6 +119,16 @@
 	<td>assertEval</td>
 	<td>${tcount1}+1==${tcount2}</td>
 	<td>true</td>
+</tr>
+<tr>
+	<td>storeText</td>
+	<td>id=notifications</td>
+	<td>breadcrumbs</td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>${breadcrumbs}</td>
+	<td></td>
 </tr>
 </tbody></table>
 </body>
