--- a/tests/selenium/tests/IAM_Users/verify-quota-values.html
+++ b/tests/selenium/tests/IAM_Users/verify-quota-values.html
@@ -42,7 +42,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=${user_1}</td>
+	<td>link=${user}</td>
 	<td></td>
 </tr>
 <tr>
@@ -84,6 +84,16 @@
 	<td>verifyValue</td>
 	<td>id=ec2_elastic_ip_max</td>
 	<td>${ec2_elastic_ip}</td>
+</tr>
+<tr>
+	<td>storeText</td>
+	<td>id=notifications</td>
+	<td>breadcrumbs</td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>${breadcrumbs}</td>
+	<td></td>
 </tr>
 </tbody></table>
 </body>
