--- a/tests/selenium/tests/IAM_Users/verify-users-number-increased-by-1.html
+++ b/tests/selenium/tests/IAM_Users/verify-users-number-increased-by-1.html
@@ -115,6 +115,16 @@
 	<td>${iam_users}</td>
 	<td></td>
 </tr>
+<tr>
+	<td>storeText</td>
+	<td>id=notifications</td>
+	<td>breadcrumbs</td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>${breadcrumbs}</td>
+	<td></td>
+</tr>
 </tbody></table>
 </body>
 </html>
