--- a/tests/selenium/tests/ElasticIPs/disassociate-ip-from-instance-on-instances-lp.html
+++ b/tests/selenium/tests/ElasticIPs/disassociate-ip-from-instance-on-instances-lp.html
@@ -37,11 +37,6 @@
 	<td></td>
 </tr>
 <tr>
-	<td>waitForVisible</td>
-	<td>id=resource-menu-instances</td>
-	<td></td>
-</tr>
-<tr>
 	<td>clickAndWait</td>
 	<td>id=resource-menu-instances</td>
 	<td></td>
@@ -57,13 +52,18 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForVisible</td>
+	<td>//ul[@id=&quot;item-dropdown_${instance_id}&quot;]/li[9]/a </td>
+	<td></td>
+</tr>
+<tr>
 	<td>click</td>
-	<td>link=Disassociate IP address</td>
+	<td>//ul[@id=&quot;item-dropdown_${instance_id}&quot;]/li[9]/a </td>
 	<td></td>
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>css=#disassociate-ip-to-instance-form &gt; div.dialog-submit-button &gt; button.button.expand</td>
+	<td>css=#disassociate-ip-to-instance-form &gt; div.dialog-submit-button &gt; #disassociate_ip_to_instance_submit_button</td>
 	<td></td>
 </tr>
 <tr>
@@ -71,7 +71,6 @@
 	<td>css=#disassociate-ip-to-instance-form &gt; div.dialog-submit-button &gt; button.button.expand</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
