--- a/tests/selenium/tests/ElasticIPs/associate-ip-to-instance-on-detail-page.html
+++ b/tests/selenium/tests/ElasticIPs/associate-ip-to-instance-on-detail-page.html
@@ -4,16 +4,16 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="http://10.111.5.153:8888/" />
-<title>associate-ip-to-instance-on-ip-lp</title>
+<title>associate-ip-to-instance-on-detail-page</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">associate-ip-to-instance-on-ip-lp</td></tr>
+<tr><td rowspan="1" colspan="3">associate-ip-to-instance-on-detail-page</td></tr>
 </thead><tbody>
 <tr>
 	<td>setSpeed</td>
-	<td>700</td>
+	<td>500</td>
 	<td></td>
 </tr>
 <tr>
@@ -33,32 +33,37 @@
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>id=resource-menu-netsec</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>id=resource-menu-netsec</td>
-	<td></td>
-</tr>
-<tr>
-	<td>waitForVisible</td>
-	<td>id=resource-menuitem-eips</td>
+	<td>//div[@id='running']/div/a/i</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>id=resource-menuitem-eips</td>
+	<td>//div[@id='running']/div/a/i</td>
 	<td></td>
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>//ul[@id=&quot;item-dropdown_${ip_}&quot;]/li[2]/a</td>
+	<td>//td/a[@href=&quot;/instances/${instance_id}&quot;]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>//td/a[@href=&quot;/instances/${instance_id}&quot;]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForVisible</td>
+	<td>link=Actions</td>
 	<td></td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>//ul[@id=&quot;item-dropdown_${ip_}&quot;]/li[2]/a</td>
+	<td>link=Actions</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>id=associate-ip-action</td>
 	<td></td>
 </tr>
 <tr>
@@ -72,30 +77,36 @@
 	<td></td>
 </tr>
 <tr>
-	<td>waitForVisible</td>
-	<td>css=div.chosen-search &gt; input[type=&quot;text&quot;]</td>
-	<td></td>
-</tr>
-<tr>
-	<td>sendKeys</td>
-	<td>css=div.chosen-search &gt; input[type=&quot;text&quot;]</td>
-	<td>${instance_name} (${instance_id})</td>
-</tr>
-<tr>
-	<td>waitForVisible</td>
-	<td>//div[@id='instance_id_chosen']/div/ul/li/em</td>
+	<td>echo</td>
+	<td>${ip}</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAt</td>
-	<td>//div[@id='instance_id_chosen']/div/ul/li/em</td>
+	<td>//li[text()=&quot;${ip}&quot;]</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>id=associate_ip_submit_button</td>
+	<td>id=associate_ip_to_instance_submit_button</td>
 	<td></td>
 </tr>
+<tr>
+	<td>waitForVisible</td>
+	<td>id=notifications</td>
+	<td></td>
+</tr>
+<tr>
+	<td>storeText</td>
+	<td>id=notifications</td>
+	<td>breadcrumbs</td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>${breadcrumbs}</td>
+	<td></td>
+</tr>
+
 </tbody></table>
 </body>
 </html>
