--- a/tests/selenium/tests/ElasticIPs/disassociate-ip-from-instance-on-instances-lp.html
+++ b/tests/selenium/tests/ElasticIPs/disassociate-ip-from-instance-on-instances-lp.html
@@ -53,22 +53,37 @@
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>//ul[@id=&quot;item-dropdown_${instance_id}&quot;]/li[9]/a </td>
+	<td>//ul[@id=&quot;item-dropdown_${instance_id}&quot;]/li[8]/a </td>
 	<td></td>
 </tr>
 <tr>
 	<td>click</td>
-	<td>//ul[@id=&quot;item-dropdown_${instance_id}&quot;]/li[9]/a </td>
+	<td>//ul[@id=&quot;item-dropdown_${instance_id}&quot;]/li[8]/a </td>
 	<td></td>
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>css=#disassociate-ip-to-instance-form &gt; div.dialog-submit-button &gt; #disassociate_ip_to_instance_submit_button</td>
+	<td>id=disassociate_ip_to_instance_submit_button</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>css=#disassociate-ip-to-instance-form &gt; div.dialog-submit-button &gt; button.button.expand</td>
+	<td>id=disassociate_ip_to_instance_submit_button</td>
+	<td></td>
+</tr>
+<tr>
+	<td>waitForVisible</td>
+	<td>id=notifications</td>
+	<td></td>
+</tr>
+<tr>
+	<td>storeText</td>
+	<td>id=notifications</td>
+	<td>breadcrumbs</td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>${breadcrumbs}</td>
 	<td></td>
 </tr>
 </tbody></table>
