--- a/tests/selenium/tests/ElasticIPs/release-ip-on-ip-lp.html
+++ b/tests/selenium/tests/ElasticIPs/release-ip-on-ip-lp.html
@@ -4,41 +4,31 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="http://10.111.5.153:8888/" />
-<title>disassociate-ip-from-instance-on-ip-lp</title>
+<title>release-ip-on-ip-lp</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">disassociate-ip-from-instance-on-ip-lp</td></tr>
+<tr><td rowspan="1" colspan="3">release-ip-on-ip-lp</td></tr>
 </thead><tbody>
 <tr>
-	<td>setSpeed</td>
-	<td>500</td>
-	<td></td>
-</tr>
-<tr>
-	<td>setTimeout</td>
-	<td>60000</td>
-	<td></td>
-</tr>
-<tr>
-	<td>waitForVisible</td>
-	<td>id=resource-menu-dashboard</td>
-	<td></td>
-</tr>
-<tr>
 	<td>clickAndWait</td>
 	<td>id=resource-menu-dashboard</td>
 	<td></td>
 </tr>
 <tr>
-	<td>waitForVisible</td>
-	<td>css=#elastic-ips &gt; div.tile &gt; div.content &gt; a &gt; i.icon</td>
+	<td>click</td>
+	<td>id=resource-menu-netsec</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>css=#elastic-ips &gt; div.tile &gt; div.content &gt; a &gt; i.icon</td>
+	<td>id=resource-menuitem-eips</td>
+	<td></td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>${ip_}</td>
 	<td></td>
 </tr>
 <tr>
@@ -52,20 +42,36 @@
 	<td></td>
 </tr>
 <tr>
+	<td>waitForVisible</td>
+	<td>//ul[@id=&quot;item-dropdown_${ip_}&quot;]/li[3]/a</td>
+	<td></td>
+</tr>
+<tr>
 	<td>click</td>
-	<td>//ul[@id=&quot;item-dropdown_${ip_}&quot;]/li/a</td>
+	<td>//ul[@id=&quot;item-dropdown_${ip_}&quot;]/li[3]/a</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>css=#release-ip-modal &gt; form.ng-pristine.ng-valid &gt; div.dialog-submit-button &gt; button.button.expand</td>
 	<td></td>
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>id=disassociate_ip_submit_button</td>
+	<td>id=notifications</td>
 	<td></td>
 </tr>
 <tr>
-	<td>click</td>
-	<td>id=disassociate_ip_submit_button</td>
+	<td>storeText</td>
+	<td>id=notifications</td>
+	<td>breadcrumbs</td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>${breadcrumbs}</td>
 	<td></td>
 </tr>
+
 </tbody></table>
 </body>
 </html>
