Added breadcrumbs to AS tests

--- a/tests/selenium/tests/IAM_Users/verify-as-quota-values.html
+++ b/tests/selenium/tests/IAM_Users/verify-as-quota-values.html
@@ -70,6 +70,16 @@
 	<td>id=scaling_policies_max</td>
 	<td>${as_sp}</td>
 </tr>
+<tr>
+	<td>storeText</td>
+	<td>id=notifications</td>
+	<td>breadcrumbs</td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>${breadcrumbs}</td>
+	<td></td>
+</tr>
 </tbody></table>
 </body>
 </html>
