--- a/tests/selenium/tests/IAM_Users/verify-as-scale-policy-quota.html
+++ b/tests/selenium/tests/IAM_Users/verify-as-scale-policy-quota.html
@@ -160,6 +160,16 @@
 	<td>${divcount1} + 1 == ${divcount2}</td>
 	<td>true</td>
 </tr>
+<tr>
+	<td>storeText</td>
+	<td>id=notifications</td>
+	<td>breadcrumbs</td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>${breadcrumbs}</td>
+	<td></td>
+</tr>
 </tbody></table>
 </body>
 </html>
