Updated Volume ops suite after adding more options and verification to s_group suite.

--- a/tests/selenium/VOLUME_OPERATIONS.html
+++ b/tests/selenium/VOLUME_OPERATIONS.html
@@ -17,6 +17,8 @@
 <tr><td><a href="tests/Volumes/verify-volume-visible-on-lp.html">verify-volume-visible-on-lp</a></td></tr>
 <tr><td><a href="tests/Keypairs/create-key-pair-from-landing-page.html">create-key-pair-from-landing-page</a></td></tr>
 <tr><td><a href="tests/Keypairs/verify-key-pair-was-created.html">verify-key-pair-was-created</a></td></tr>
+<tr><td><a href="tests/StoreAndSet/set-s-group-name-to-group-and-5randomchars.html">set-s-group-name-to-group-and-5randomchars</a></td></tr>
+<tr><td><a href="tests/StoreAndSet/set-s-group-description-short.html">set-s-group-description-short</a></td></tr>
 <tr><td><a href="tests/SecurityGroups/create-s-group-from-lp-with-RDP-SSH-cTCP-to-default-1-tag.html">create-s-group-from-lp-with-RDP-SSH-cTCP-to-default-1-tag</a></td></tr>
 <tr><td><a href="tests/StoreAndSet/set-instance-type-to-m1-medium.html">set-instance-type-to-m1-medium</a></td></tr>
 <tr><td><a href="tests/Instances/launch-instance-from-instances-lp.html">launch-instance-from-instances-lp</a></td></tr>
