Added verification to verify-volume-status-is-attached-on-inst-detail-page.html

--- a/tests/selenium/tests/Volumes/verify-volume-status-is-attached-on-inst-detail-page.html
+++ b/tests/selenium/tests/Volumes/verify-volume-status-is-attached-on-inst-detail-page.html
@@ -67,6 +67,11 @@
 	<td>k</td>
 </tr>
 <tr>
+	<td>waitForVisible</td>
+	<td>//a[@href=&quot;/volumes/${volume_id}&quot;]/../../../div[@class=&quot;footer status attached&quot;]</td>
+	<td></td>
+</tr>
+<tr>
 	<td>storeText</td>
 	<td>//a[@href=&quot;/volumes/${volume_id}&quot;]/../../../div[@class=&quot;footer status attached&quot;]</td>
 	<td>status</td>
