--- a/tests/selenium/tests/IAM_Users/verify-as-scaling-group-config-quota.html
+++ b/tests/selenium/tests/IAM_Users/verify-as-scaling-group-config-quota.html
@@ -121,9 +121,19 @@
 	<td></td>
 </tr>
 <tr>
-	<td>assertTextPresent</td>
+	<td>storeTextPresent</td>
 	<td>Request would exceed quota for type: autoscalingroup</td>
+	<td>asquota</td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>${asquota}</td>
 	<td></td>
+</tr>
+<tr>
+	<td>assertEval</td>
+	<td>${asquota}</td>
+	<td>true</td>
 </tr>
 <tr>
 	<td>waitForTextPresent</td>
