--- a/tests/selenium/tests/SecurityGroups/create-s-group-from-lp-with-no-rules-no-tags.html
+++ b/tests/selenium/tests/SecurityGroups/create-s-group-from-lp-with-no-rules-no-tags.html
@@ -47,24 +47,14 @@
 	<td></td>
 </tr>
 <tr>
-	<td>storeEval</td>
-	<td>(Math.random().toString(36)+&quot;000000000&quot;).slice(2,7);</td>
-	<td>str</td>
-</tr>
-<tr>
 	<td>type</td>
 	<td>id=name</td>
-	<td>group${str}</td>
-</tr>
-<tr>
-	<td>store</td>
-	<td>group${str}</td>
-	<td>s_group_name</td>
+	<td>${s_group_name}</td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>id=description</td>
-	<td>Security group with no rules created by UI test.</td>
+	<td>${s_group_description} from Landing page, no rules added</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
