--- a/tests/selenium/tests/Volumes/delete-volume-from-lp.html
+++ b/tests/selenium/tests/Volumes/delete-volume-from-lp.html
@@ -81,6 +81,96 @@
 	<td>${breadcrumbs}</td>
 	<td></td>
 </tr>
+<tr>
+	<td>storeEval</td>
+	<td>1</td>
+	<td>k</td>
+</tr>
+<tr>
+	<td>waitForVisible</td>
+	<td>//td/a[@href=&quot;/volumes/${volume_id}&quot;]/../../td[2]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>storeText</td>
+	<td>//td/a[@href=&quot;/volumes/${volume_id}&quot;]/../../td[2]</td>
+	<td>status</td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>javascript{storedVars['status']=${status}};</td>
+	<td></td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>${status}</td>
+	<td></td>
+</tr>
+<tr>
+	<td>storeEval</td>
+	<td>storedVars['deleted']=&quot;deleted&quot;;</td>
+	<td></td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>${deleted}</td>
+	<td></td>
+</tr>
+<tr>
+	<td>storeEval</td>
+	<td>storedVars['status']==storedVars['deleted']</td>
+	<td>is_deleted</td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>${is_deleted}</td>
+	<td></td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>javascript{storedVars['is_deleted']=${is_deleted}};</td>
+	<td></td>
+</tr>
+<tr>
+	<td>while</td>
+	<td>${k}&lt;20&amp;&amp;!${is_deleted}</td>
+	<td></td>
+</tr>
+<tr>
+	<td>pause</td>
+	<td>30000</td>
+	<td></td>
+</tr>
+<tr>
+	<td>storeText</td>
+	<td>//td/a[@href=&quot;/volumes/${volume_id}&quot;]/../../td[2]</td>
+	<td>status</td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>${status}</td>
+	<td></td>
+</tr>
+<tr>
+	<td>storeEval</td>
+	<td>storedVars['status']==storedVars['deleted']</td>
+	<td>is_deleted</td>
+</tr>
+<tr>
+	<td>echo</td>
+	<td>${is_deleted}</td>
+	<td></td>
+</tr>
+<tr>
+	<td>storeEval</td>
+	<td>${k}+1</td>
+	<td>k</td>
+</tr>
+<tr>
+	<td>endWhile</td>
+	<td></td>
+	<td></td>
+</tr>
 </tbody></table>
 </body>
 </html>
