--- a/tests/selenium/tests/SecurityGroups/create-s-group-from-dashboard-with-HTTP-HTTPS-cICMP-to-default-1-tag.html
+++ b/tests/selenium/tests/SecurityGroups/create-s-group-from-dashboard-with-HTTP-HTTPS-cICMP-to-default-1-tag.html
@@ -42,24 +42,14 @@
 	<td></td>
 </tr>
 <tr>
-	<td>storeEval</td>
-	<td>(Math.random().toString(36)+&quot;000000000&quot;).slice(2,7);</td>
-	<td>str</td>
-</tr>
-<tr>
 	<td>type</td>
 	<td>id=name</td>
-	<td>group${str}</td>
-</tr>
-<tr>
-	<td>store</td>
-	<td>group${str}</td>
-	<td>s_group_name</td>
+	<td>${s_group_name}</td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>id=description</td>
-	<td>Group with HTTP created by UI test from Dashboard.</td>
+	<td>${s_group_description} from Dashboard</td>
 </tr>
 <tr>
 	<td>clickAt</td>
