--- a/tests/selenium/tests/Volumes/verify-volume-status-is-attached-on-inst-detail-page.html
+++ b/tests/selenium/tests/Volumes/verify-volume-status-is-attached-on-inst-detail-page.html
@@ -68,12 +68,12 @@
 </tr>
 <tr>
 	<td>waitForVisible</td>
-	<td>//a[@href=&quot;/volumes/${volume_id}&quot;]/../../../div[@class=&quot;footer status attached&quot;]</td>
+	<td>//a[@href=&quot;/volumes/${volume_id}&quot;]/../../../div[3]</td>
 	<td></td>
 </tr>
 <tr>
 	<td>storeText</td>
-	<td>//a[@href=&quot;/volumes/${volume_id}&quot;]/../../../div[@class=&quot;footer status attached&quot;]</td>
+	<td>//a[@href=&quot;/volumes/${volume_id}&quot;]/../../../div[3]</td>
 	<td>status</td>
 </tr>
 <tr>
